# dihi

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  plan.audio-metadata.md  plan.md  plan.playlist.md  pyproject.toml  requirements.txt
data/: cookies.txt
extension/: background.js  content.js  generate_icons.py  manifest.json  popup.html  popup.js  service_worker.js
src/dihi/: app.py  app2.py  app3.py  archive.txt  cli.py  cookies.txt  getit.py  getvidyt.py
src/dihi/templates/: index.html  tags.html
tests/: conftest.py  test_app3_pure.py  test_getvidyt_pure.py
youtube-id-server-checker/: README.md  manifest.json  options.html  options.js  popup.js
